cabal-version: 2.4
name: merkle-log
version: 0.2.0
synopsis: Merkle Tree Logs
description: Binary Merkle Trees
homepage: https://github.com/kadena-io/merkle-log
bug-reports: https://github.com/kadena-io/merkle-log/issues
license: BSD-3-Clause
license-file: LICENSE
author: Lars Kuhtz
maintainer: Lars Kuhtz <lars@kadena.io>
copyright: Copyright (c) 2019-2023, Kadena LLC
category: Data
tested-with:
    GHC==9.10
    GHC==9.8
    GHC==9.6
    GHC==9.4
    GHC==9.2
    GHC==9.0
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/kadena-io/merkle-log.git

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
    exposed-modules:
        Data.MerkleLog
        Data.MerkleLog.Proof
        Data.MerkleLog.Root
        Data.MerkleLog.Utils
        Data.MerkleLog.Common
        Data.MerkleLog.Internal

        Data.MerkleLog.V1
        Data.MerkleLog.V1.Proof
        Data.MerkleLog.V1.Tree
        Data.MerkleLog.V1.Primitive
        Data.MerkleLog.V1.Slice

        -- Internal Tools
        Data.MerkleLog.NullHash
    build-depends:
        , base >=4.11 && <5
        , base64-bytestring >=1.0
        , bytestring >=0.10
        , deepseq >=1.4
        , exceptions >=0.10
        , hashes >= 0.3
        , text >=1.2

        -- experimental
        , streaming >=0.2.4

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:
        -- internal
        , merkle-log

        -- external
        , QuickCheck >=2.12
        , base >=4.11 && <5
        , bytestring >=0.10
        , deepseq >=1.4
        , exceptions >=0.10
        , hashes >= 0.3
        , hspec >=2.11

benchmark benchmarks
    type: exitcode-stdio-1.0
    hs-source-dirs: bench
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:
        -- internal
        , merkle-log

        -- external
        , QuickCheck >=2.12
        , base >=4.11 && <5
        , bytestring >=0.10
        , criterion >=1.5
        , crypton >=0.31
        , cryptonite >=0.30
        , deepseq >=1.4
        , hashes >= 0.3
        , hash-tree >=0.0
        , memory >=0.14
        , random >=1.2
        , streaming >=0.2.4
        , transformers >= 0.6

executable cli
    hs-source-dirs: examples
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    default-language: Haskell2010
    main-is: Cli.hs
    build-depends:
        -- internal
        , merkle-log

        -- external
        , base >=4.11 && <5
        , base16 >= 1.0
        , bytestring >=0.10
        , hashes >= 0.3
        , streaming >=0.2.4
