cabal-version: 2.4
name: merkle-log
version: 0.2.0
synopsis: Merkle Tree Logs
description: Binary Merkle Trees
homepage: https://github.com/kadena-io/merkle-log
bug-reports: https://github.com/kadena-io/merkle-log/issues
license: BSD-3-Clause
license-file: LICENSE
author: Lars Kuhtz
maintainer: Lars Kuhtz <lars@kadena.io>
copyright: Copyright (c) 2019-2023, Kadena LLC
category: Data
tested-with:
    GHC==9.10
    GHC==9.8
    GHC==9.6
    GHC==9.4
    GHC==9.2
    GHC==9.0
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/kadena-io/merkle-log.git

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
    exposed-modules:
        Data.MerkleLog
    build-depends:
        , base >=4.11 && <5
        , bytestring >=0.10
        , crypton >=1.1.2
        , deepseq >=1.4
        , exceptions >=0.10
        , ram >=0.22
        , text >=1.2

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:
        -- internal
        , merkle-log

        -- external
        , QuickCheck >=2.11
        , base >=4.11 && <5
        , bytestring >=0.10
        , crypton >=1.1.2
        , deepseq >=1.4
        , exceptions >=0.10
        , ram >=0.22

benchmark benchmarks
    type: exitcode-stdio-1.0
    hs-source-dirs: bench
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:
        -- internal
        , merkle-log

        -- external
        , QuickCheck >=2.11
        , base >=4.11 && <5
        , bytestring >=0.10
        , criterion >=1.5
        , crypton >=1.1.2
        , deepseq >=1.4
        , hash-tree >=0.1.0
        , ram >=0.22
        , random >=1.2
        , transformers >= 0.6

